# middle-python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  main.py  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: __init__.py  app.py  checker.py  db.py  models.py  validators_ext.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
