[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "validators>=0.22.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
]
